<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_card_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/background_item_card"
        android:elevation="@dimen/item_card_background_elevation"

        android:layout_marginVertical="@dimen/item_card_margin_vertical"
        android:layout_marginHorizontal="@dimen/item_card_margin_horizontal">

        <ImageView
            android:id="@+id/item_card_image"
            android:layout_width="@dimen/item_card_image_width"
            android:layout_height="wrap_content"

            android:contentDescription="@string/item_card_image_description"

            android:layout_marginTop="@dimen/item_card_image_margin_vertical"
            android:layout_marginStart="@dimen/item_card_image_margin_horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/item_card_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_item_favourite"
            android:contentDescription="@string/item_card_favourite_description"

            android:layout_marginTop="@dimen/item_card_image_margin_vertical"
            android:layout_marginEnd="@dimen/item_card_image_margin_horizontal"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/item_card_description_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:orientation="vertical"

            android:layout_marginTop="@dimen/item_card_description_margin_vertical"
            android:layout_marginHorizontal="@dimen/item_card_description_text_margin_horizontal"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_card_image"
            app:layout_constraintEnd_toStartOf="@id/item_card_favourite">

            <LinearLayout
                android:id="@+id/item_card_description_name_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_card_description_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/item_card_description_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"/>

                <TextView
                    android:id="@+id/item_card_description_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"

                    android:layout_marginStart="@dimen/item_card_description_text_margin_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_card_description_class_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/item_card_description_text_margin_horizontal"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_card_description_class_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/item_card_description_class"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"/>

                <TextView
                    android:id="@+id/item_card_description_class_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"

                    android:layout_marginStart="@dimen/item_card_description_text_margin_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_card_description_description_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/item_card_description_text_margin_horizontal"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_card_description_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/item_card_description_description"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"/>

                <TextView
                    android:id="@+id/item_card_description_description_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"

                    android:layout_marginStart="@dimen/item_card_description_text_margin_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_card_description_cost_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/item_card_description_text_margin_horizontal"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_card_description_cost_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/item_card_description_cost"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"/>

                <TextView
                    android:id="@+id/item_card_description_cost_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="@dimen/item_card_description_title"
                    android:textColor="@color/theme_text"

                    android:layout_marginStart="@dimen/item_card_description_text_margin_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_card_image_margin_vertical"

            app:layout_constraintTop_toBottomOf="@id/item_card_description_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/item_card_action"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/ripple_item_card"
            tools:ignore="ContentDescription"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>