<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cards_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/toolbar_background"
        android:elevation="@dimen/toolbar_elevation"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/cards_toolbar_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_search"
            android:background="@drawable/ripple_rounded"
            android:contentDescription="@string/toolbar_search_description"

            android:padding="@dimen/toolbar_icon_padding"

            android:layout_marginTop="@dimen/toolbar_item_margin_vertical"
            android:layout_marginEnd="@dimen/toolbar_item_margin_horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/cards_toolbar_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_sort"
            android:background="@drawable/ripple_rounded"
            android:contentDescription="@string/toolbar_filter_description"

            android:padding="@dimen/toolbar_icon_padding"

            android:layout_marginTop="@dimen/toolbar_item_margin_vertical"
            android:layout_marginEnd="@dimen/toolbar_item_margin_horizontal"

            app:layout_constraintEnd_toStartOf="@id/cards_toolbar_search"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/cards_toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/toolbar_cards_title"
            android:textColor="@color/toolbar_item"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold"

            android:layout_marginTop="@dimen/toolbar_item_margin_vertical"
            android:layout_marginHorizontal="@dimen/toolbar_title_margin"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cards_toolbar_sort"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/cards_toolbar_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/toolbar_background"

            app:tabTextAppearance="@style/TabLayoutTextAppearance"
            app:tabTextColor="@color/theme_text"
            app:tabSelectedTextColor="@color/theme_text"
            app:tabIndicatorColor="@color/theme_text"

            app:layout_constraintTop_toBottomOf="@id/cards_toolbar_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/cards_toolbar_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/cards_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>